--- a/app/src/main/res/layout/item_course_selection.xml
+++ b/app/src/main/res/layout/item_course_selection.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@drawable/ic_shade_img"
     android:orientation="vertical"
-    android:padding="@dimen/dimen_20dp">
+    android:padding="@dimen/dimen_15dp">
 
     <TextView
         android:id="@+id/tv_name"
@@ -20,14 +20,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dimen_5dp"
+        android:maxLines="1"
         android:text="Online Sports"
         android:textColor="@color/color_999999"
         android:textSize="11sp" />
 
-    <com.jxkj.fit_5a.conpoment.view.LinShiView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/dimen_20dp"
-        android:background="@color/color_999999" />
+        android:layout_height="wrap_content">
 
+
+        <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartView
+            android:id="@+id/AAChartView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dimen_5dp"
+            android:background="@color/color_ffffff" />
+
+        <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartView
+            android:id="@+id/AAChartView1"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/dp_10"
+            android:background="@color/color_ffffff" />
+    </RelativeLayout>
 </com.jxkj.fit_5a.conpoment.view.SquareLinearLayout>
