--- a/app/src/main/res/layout/fragment_course_selection.xml
+++ b/app/src/main/res/layout/fragment_course_selection.xml
@@ -16,6 +16,7 @@
             android:padding="@dimen/common_margin_20">
 
             <TextView
+                android:id="@+id/tv_introduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:lineSpacingExtra="@dimen/dimen_5dp"
