--- a/app/src/main/res/layout/item_home_top.xml
+++ b/app/src/main/res/layout/item_home_top.xml
@@ -24,13 +24,14 @@
         android:textColor="@color/color_333333" />
 
     <TextView
+        android:id="@+id/tv_v"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv_name"
         android:layout_marginStart="@dimen/dp_10"
         android:layout_marginTop="@dimen/dimen_5dp"
         android:layout_toEndOf="@id/iv_icon"
-        android:text="140cal"
+        android:text="0"
         android:textColor="@color/color_666666" />
 
 </RelativeLayout>
