--- a/app/src/main/res/layout/activity_rate_pattern.xml
+++ b/app/src/main/res/layout/activity_rate_pattern.xml
@@ -231,11 +231,12 @@
                     android:textSize="@dimen/sp_14" />
 
                 <TextView
+                    android:id="@+id/tv_movingTye"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_10"
                     android:layout_toEndOf="@id/tv1"
-                    android:text="70%~80% (100bpm~110bpm)"
+                    android:text=""
                     android:textColor="@color/color_333333"
                     android:textSize="@dimen/sp_14" />
 
