--- a/app/src/main/res/layout/fragment_home_one.xml
+++ b/app/src/main/res/layout/fragment_home_one.xml
@@ -276,6 +276,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/tv_phb_2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/common_margin_15"
@@ -284,6 +285,7 @@
                                     android:textSize="@dimen/sp_14" />
 
                                 <ImageView
+                                    android:id="@+id/iv_phb_2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="0dp"
                                     android:layout_margin="@dimen/dp_10"
@@ -291,6 +293,7 @@
                                     android:src="@mipmap/ic_4" />
 
                                 <TextView
+                                    android:id="@+id/tv_phb_22"
                                     android:layout_width="@dimen/dimen_80dp"
                                     android:layout_height="@dimen/dimen_20dp"
                                     android:layout_marginBottom="@dimen/dimen_15dp"
@@ -322,6 +325,7 @@
 
 
                             <TextView
+                                android:id="@+id/tv_phb_1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/dimen_15dp"
@@ -330,6 +334,7 @@
                                 android:textSize="@dimen/dimen_20dp" />
 
                             <ImageView
+                                android:id="@+id/iv_phb_1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="0dp"
                                 android:layout_margin="@dimen/dp_10"
@@ -337,6 +342,7 @@
                                 android:src="@mipmap/ic_4" />
 
                             <TextView
+                                android:id="@+id/tv_phb_11"
                                 android:layout_width="@dimen/dimen_80dp"
                                 android:layout_height="@dimen/dimen_20dp"
                                 android:layout_marginBottom="@dimen/dimen_15dp"
@@ -364,6 +370,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/tv_phb_3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/common_margin_15"
@@ -372,6 +379,7 @@
                                     android:textSize="@dimen/sp_14" />
 
                                 <ImageView
+                                    android:id="@+id/iv_phb_3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="0dp"
                                     android:layout_margin="@dimen/dp_10"
@@ -379,6 +387,7 @@
                                     android:src="@mipmap/ic_4" />
 
                                 <TextView
+                                    android:id="@+id/tv_phb_33"
                                     android:layout_width="@dimen/dimen_80dp"
                                     android:layout_height="@dimen/dimen_20dp"
                                     android:layout_marginBottom="@dimen/dimen_15dp"
