--- a/app/src/main/res/layout/fragment_home_two.xml
+++ b/app/src/main/res/layout/fragment_home_two.xml
@@ -285,6 +285,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/tv_phb_2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/common_margin_15"
@@ -293,6 +294,7 @@
                                     android:textSize="@dimen/sp_14" />
 
                                 <ImageView
+                                    android:id="@+id/iv_phb_2"
                                     android:layout_width="wrap_content"
                                     android:layout_height="0dp"
                                     android:layout_margin="@dimen/dp_10"
@@ -300,6 +302,7 @@
                                     android:src="@mipmap/ic_4" />
 
                                 <TextView
+                                    android:id="@+id/tv_phb_22"
                                     android:layout_width="@dimen/dimen_80dp"
                                     android:layout_height="@dimen/dimen_20dp"
                                     android:layout_marginBottom="@dimen/dimen_15dp"
@@ -331,6 +334,7 @@
 
 
                             <TextView
+                                android:id="@+id/tv_phb_1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginTop="@dimen/dimen_15dp"
@@ -339,6 +343,7 @@
                                 android:textSize="@dimen/dimen_20dp" />
 
                             <ImageView
+                                android:id="@+id/iv_phb_1"
                                 android:layout_width="wrap_content"
                                 android:layout_height="0dp"
                                 android:layout_margin="@dimen/dp_10"
@@ -346,6 +351,7 @@
                                 android:src="@mipmap/ic_4" />
 
                             <TextView
+                                android:id="@+id/tv_phb_11"
                                 android:layout_width="@dimen/dimen_80dp"
                                 android:layout_height="@dimen/dimen_20dp"
                                 android:layout_marginBottom="@dimen/dimen_15dp"
@@ -373,6 +379,7 @@
                                 android:orientation="vertical">
 
                                 <TextView
+                                    android:id="@+id/tv_phb_3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:layout_marginTop="@dimen/common_margin_15"
@@ -381,6 +388,7 @@
                                     android:textSize="@dimen/sp_14" />
 
                                 <ImageView
+                                    android:id="@+id/iv_phb_3"
                                     android:layout_width="wrap_content"
                                     android:layout_height="0dp"
                                     android:layout_margin="@dimen/dp_10"
@@ -388,6 +396,7 @@
                                     android:src="@mipmap/ic_4" />
 
                                 <TextView
+                                    android:id="@+id/tv_phb_33"
                                     android:layout_width="@dimen/dimen_80dp"
                                     android:layout_height="@dimen/dimen_20dp"
                                     android:layout_marginBottom="@dimen/dimen_15dp"
