--- a/app/src/main/res/layout/fragment_home_three.xml
+++ b/app/src/main/res/layout/fragment_home_three.xml
@@ -188,8 +188,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_sq_list"
                 android:layout_width="match_parent"
+                android:background="@color/line_color"
+                android:paddingHorizontal="@dimen/dimen_5dp"
                 android:overScrollMode="never"
-                android:layout_margin="@dimen/dimen_5dp"
                 android:layout_height="wrap_content" />
 
 
