--- a/app/src/main/res/layout/item_home_three_sq.xml
+++ b/app/src/main/res/layout/item_home_three_sq.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="@dimen/dimen_5dp"
+    android:background="@color/color_ffffff"
     android:orientation="vertical">
 
 
@@ -17,7 +18,9 @@
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_10"
+        android:layout_margin="@dimen/dp_10"
+        android:maxLines="2"
+        android:ellipsize="end"
         android:text="标题标题标题标题标题标题标题标题"
         android:textColor="@color/color_333333"
         android:textSize="13sp" />
@@ -25,6 +28,7 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="@dimen/dp_10"
         android:layout_marginBottom="@dimen/dp_10">
 
 
