--- a/app/src/main/res/layout/activity_video_1.xml
+++ b/app/src/main/res/layout/activity_video_1.xml
@@ -7,9 +7,15 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_list"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:overScrollMode="never" />
+
+    <SurfaceView
+        android:id="@+id/playview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:id="@+id/rl_actionbar"
