--- a/app/src/main/res/layout/item_two_jlxq.xml
+++ b/app/src/main/res/layout/item_two_jlxq.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/iv_imgUrl"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="47dp"
+        android:layout_height="47dp"
+        android:layout_marginStart="@dimen/dp_10"
         android:src="@mipmap/ic_2" />
 
     <LinearLayout
@@ -48,6 +49,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_distance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="24"
@@ -73,6 +75,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_calories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="100"
@@ -98,6 +101,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/tv_duration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="20"
