--- a/app/src/main/res/layout/activity_task_finish.xml
+++ b/app/src/main/res/layout/activity_task_finish.xml
@@ -144,7 +144,7 @@
 
             </RelativeLayout>
 
-            <RelativeLayout
+            <com.jxkj.fit_5a.conpoment.view.SquareRelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/dimen_20dp"
@@ -156,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/dp_10"
                     android:layout_marginTop="@dimen/dp_10"
-                    android:text="你的身高"
+                    android:text="心率分析"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -181,9 +181,9 @@
                         android:id="@+id/tv_xz"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginVertical="@dimen/dimen_5dp"
-                        android:layout_marginHorizontal="@dimen/dp_10"
                         android:layout_centerInParent="true"
+                        android:layout_marginHorizontal="@dimen/dp_10"
+                        android:layout_marginVertical="@dimen/dimen_5dp"
                         android:drawableEnd="@drawable/icon_jiantou_xia_theme"
                         android:drawablePadding="@dimen/dimen_5dp"
                         android:text="饼状图"
@@ -191,11 +191,10 @@
                         android:textSize="14sp" />
                 </RelativeLayout>
 
-
-                <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/chart1"
+                <com.jxkj.fit_5a.AAChartCoreLib.AAChartCreator.AAChartView
+                    android:id="@+id/AAChartView"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_below="@id/rl" />
 
                 <LinearLayout
@@ -203,12 +202,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
-                    android:layout_below="@id/rl"
-                    android:layout_marginTop="@dimen/dimen_20dp">
+                    android:layout_alignParentBottom="true">
 
                     <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dp_10"
                         android:layout_weight="1"
                         android:gravity="center_horizontal">
 
@@ -216,13 +215,13 @@
                             android:id="@+id/vertical_progressbar1"
                             style="@style/Widget.ProgressBar.VerticalJs"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:progress="80" />
 
                         <View
                             android:id="@+id/view1"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:layout_marginStart="@dimen/dimen_5dp"
                             android:layout_toEndOf="@id/vertical_progressbar1"
                             android:background="@drawable/progress_task_finish_bg" />
@@ -233,7 +232,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/view1"
-                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:layout_marginTop="@dimen/dimen_15dp"
                             android:text="25%"
                             android:textColor="#282C37"
                             android:textSize="15sp"
@@ -263,6 +262,7 @@
                     <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dp_10"
                         android:layout_weight="1"
                         android:gravity="center_horizontal">
 
@@ -270,13 +270,13 @@
                             android:id="@+id/vertical_progressbar2"
                             style="@style/Widget.ProgressBar.VerticalJs"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:progress="40" />
 
                         <View
                             android:id="@+id/view2"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:layout_marginStart="@dimen/dimen_5dp"
                             android:layout_toEndOf="@id/vertical_progressbar2"
                             android:background="@drawable/progress_task_finish_bg" />
@@ -287,7 +287,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/view2"
-                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:layout_marginTop="@dimen/dimen_15dp"
                             android:text="25%"
                             android:textColor="#282C37"
                             android:textSize="15sp"
@@ -317,6 +317,7 @@
                     <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dp_10"
                         android:layout_weight="1"
                         android:gravity="center_horizontal">
 
@@ -324,13 +325,13 @@
                             android:id="@+id/vertical_progressbar3"
                             style="@style/Widget.ProgressBar.VerticalJs"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:progress="80" />
 
                         <View
                             android:id="@+id/view3"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:layout_marginStart="@dimen/dimen_5dp"
                             android:layout_toEndOf="@id/vertical_progressbar3"
                             android:background="@drawable/progress_task_finish_bg" />
@@ -341,7 +342,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/view3"
-                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:layout_marginTop="@dimen/dimen_15dp"
                             android:text="25%"
                             android:textColor="#282C37"
                             android:textSize="15sp"
@@ -371,6 +372,7 @@
                     <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dp_10"
                         android:layout_weight="1"
                         android:gravity="center_horizontal">
 
@@ -378,13 +380,13 @@
                             android:id="@+id/vertical_progressbar4"
                             style="@style/Widget.ProgressBar.VerticalJs"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:progress="40" />
 
                         <View
                             android:id="@+id/view4"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:layout_marginStart="@dimen/dimen_5dp"
                             android:layout_toEndOf="@id/vertical_progressbar4"
                             android:background="@drawable/progress_task_finish_bg" />
@@ -395,7 +397,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/view4"
-                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:layout_marginTop="@dimen/dimen_15dp"
                             android:text="25%"
                             android:textColor="#282C37"
                             android:textSize="15sp"
@@ -425,6 +427,7 @@
                     <RelativeLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/dp_10"
                         android:layout_weight="1"
                         android:gravity="center_horizontal">
 
@@ -432,13 +435,13 @@
                             android:id="@+id/vertical_progressbar5"
                             style="@style/Widget.ProgressBar.VerticalJs"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:progress="40" />
 
                         <View
                             android:id="@+id/view5"
                             android:layout_width="8dp"
-                            android:layout_height="130dp"
+                            android:layout_height="160dp"
                             android:layout_marginStart="@dimen/dimen_5dp"
                             android:layout_toEndOf="@id/vertical_progressbar5"
                             android:background="@drawable/progress_task_finish_bg" />
@@ -449,7 +452,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_below="@id/view5"
-                            android:layout_marginTop="@dimen/dimen_25dp"
+                            android:layout_marginTop="@dimen/dimen_15dp"
                             android:text="25%"
                             android:textColor="#282C37"
                             android:textSize="15sp"
@@ -479,7 +482,7 @@
 
                 </LinearLayout>
 
-            </RelativeLayout>
+            </com.jxkj.fit_5a.conpoment.view.SquareRelativeLayout>
 
             <RelativeLayout
                 android:layout_width="match_parent"
