--- a/app/src/main/res/layout/item_home_three_sq.xml
+++ b/app/src/main/res/layout/item_home_three_sq.xml
@@ -8,7 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -16,11 +16,11 @@
             android:background="@color/color_ffffff"
             android:orientation="vertical">
 
-            <ImageView
+            <com.jxkj.fit_5a.conpoment.view.SquareImageView
                 android:id="@+id/iv_icon"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:adjustViewBounds="true"
+                android:scaleType="centerCrop"
                 android:src="@mipmap/ic_13" />
 
             <TextView
