--- a/app/src/main/res/layout/fragment_home_one.xml
+++ b/app/src/main/res/layout/fragment_home_one.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/color_ffffff"
     android:orientation="vertical">
 
@@ -199,29 +200,28 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="“"
+                    android:visibility="invisible"
                     android:textColor="@color/color_text_theme"
                     android:textSize="@dimen/dimen_30dp"
                     android:textStyle="bold" />
 
-                <com.jxkj.fit_5a.conpoment.view.MarqueeTextView
+                <com.xiaosu.view.text.VerticalRollingTextView
                     android:id="@+id/tv_message_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:ellipsize="marquee"
-                    android:focusable="true"
-                    android:focusableInTouchMode="true"
-                    android:marqueeRepeatLimit="marquee_forever"
-                    android:scrollHorizontally="true"
-                    android:singleLine="true"
-                    android:text="有鸡可乘已更新！有鸡可乘APP更新啦，快来租鸡产蛋吧~"
+                    android:background="@color/white"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:textSize="12sp"
                     android:textColor="@color/color_333333"
-                    android:textSize="@dimen/sp_14" />
-
+                    app:animInterval="3000"
+                    app:itemCount="1" />
                 <TextView
                     android:layout_width="@dimen/dimen_20dp"
                     android:layout_height="wrap_content"
                     android:text="”"
+                    android:visibility="invisible"
                     android:textColor="@color/color_text_theme"
                     android:textSize="@dimen/dimen_30dp"
                     android:textStyle="bold" />
