--- a/app/src/main/res/layout/item_home_sign_top.xml
+++ b/app/src/main/res/layout/item_home_sign_top.xml
@@ -28,6 +28,7 @@
         android:src="@drawable/ic_sign_lw" />
 
     <TextView
+        android:id="@+id/tv_day"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tv"
