--- a/app/src/main/res/layout/fragment_home_three.xml
+++ b/app/src/main/res/layout/fragment_home_three.xml
@@ -48,7 +48,9 @@
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,9 +96,9 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_top_list"
                 android:layout_width="match_parent"
-                android:overScrollMode="never"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/dp_10" />
+                android:layout_marginStart="@dimen/dp_10"
+                android:overScrollMode="never" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -143,9 +145,9 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_rmht_list"
-                    android:overScrollMode="never"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content"
+                    android:overScrollMode="never" />
 
             </LinearLayout>
 
@@ -188,10 +190,10 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_sq_list"
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@color/line_color"
-                android:paddingHorizontal="@dimen/dimen_5dp"
                 android:overScrollMode="never"
-                android:layout_height="wrap_content" />
+                android:paddingHorizontal="@dimen/dimen_5dp" />
 
 
         </LinearLayout>
